--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.EC2_PEM_PF }}
           port: 22
           source: "."
-          target: "~.app"
+          target: "~./app"
 
       - name: Deploy app using docker-compose
         uses: appleboy/ssh-action@v0.1.10
@@ -30,4 +30,4 @@ jobs:
           port: 22
           script: |
             cd ~/app
-            docker-compose up -d app
+            docker-compose up -d
