--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -29,5 +29,10 @@ jobs:
           key: ${{ secrets.EC2_PEM_PF }}
           port: 22
           script: |
+            echo "${{ secrets.GH_EC2T_PF }}" | docker login ghcr.io -u ${{ secrets.GH_PF }} --password-stdin
+            docker pull ghcr.io/${{ secrets.GH_PF }}/fastapi-app:latest
+            docker stop fastapi-app || true
+            docker rm fastapi-app || true
+            docker run -d -p 8000:8000 --name fastapi-app ghcr.io/${{ secrets.GH_USERNAME }}/fastapi-app:latest
             cd ~/app
             docker-compose up -d
