--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,10 @@ version: "3.8"
 
 services:
   app:
-    build: ./app
+    build: .
     container_name: app
     ports:
-      - "8000:8000"
+      - "5000:5000"
     networks:
       - monitor-net
 
