--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 5s
 
 scrape_configs:
-  - job_name: 'flask-app'
+  - job_name: 'fastapi-app'
     static_configs:
-      - targets: ['app:8000']
+      - targets: ['app:5000']
