--- a/.github/workflows/upload.yaml
+++ b/.github/workflows/upload.yaml
@@ -30,4 +30,6 @@ jobs:
           port: 22
           script: |
             cd ~/app
+            docker-compose down || true
+            docker-compose build --no-cache
             docker-compose up -d
